Added main page and routing

--- a/music-client/src/app/app.component.html
+++ b/music-client/src/app/app.component.html
@@ -3,9 +3,7 @@
   <img width="40" alt="Main Logo" src="../assets/main-logo.svg" />
   <h2>Music Database</h2>
   <div class="spacer"></div>
-  <router-outlet></router-outlet>
 </div>
 
-<div class="main-content">
-  <mat-card>Test</mat-card>
-</div>
+<app-main-page></app-main-page>
+<router-outlet></router-outlet>
