--- a/music-client/src/app/components/song-page/song-page.component.html
+++ b/music-client/src/app/components/song-page/song-page.component.html
@@ -1,1 +1,8 @@
-<p>song-page works!</p>
+<div class="song-page-title">Songs</div>
+
+<div *ngFor="let song of songs">
+  <!-- [class.selected]="hero === selectedHero"
+(click)="onSelect(hero)"> -->
+
+  <mat-card>{{ song.name }}</mat-card>
+</div>
