--- a/music-client/src/app/components/album-page/album-page.component.html
+++ b/music-client/src/app/components/album-page/album-page.component.html
@@ -1,8 +1,2 @@
 <div class="album-page-title">Album</div>
-
-<div *ngFor="let album of albums">
-  <!-- [class.selected]="hero === selectedHero"
-(click)="onSelect(hero)"> -->
-
-  <mat-card>{{ album.name }}</mat-card>
-</div>
+<app-table-list [inputArray]="albums"></app-table-list>
