--- a/music-client/src/app/components/artist-page/artist-page.component.html
+++ b/music-client/src/app/components/artist-page/artist-page.component.html
@@ -1,8 +1,3 @@
-<div class="artist-page-title">Artists</div>
+<div class="artist-page-title">Browse by Artists</div>
 
-<div *ngFor="let artist of artists">
-  <!-- [class.selected]="hero === selectedHero"
-(click)="onSelect(hero)"> -->
-
-  <mat-card>{{ artist.name }}</mat-card>
-</div>
+<app-table-list [inputArray]="artists"></app-table-list>
