--- a/music-client/src/app/components/album-page/album-page.component.html
+++ b/music-client/src/app/components/album-page/album-page.component.html
@@ -1,2 +1,2 @@
-<div class="album-page-title">Album</div>
+<div class="album-page-title">Browse by Albums</div>
 <app-table-list [inputArray]="albums"></app-table-list>
