Added new pages for partist, song and album profile

--- a/music-client/src/app/shared/table-list/table-list.component.html
+++ b/music-client/src/app/shared/table-list/table-list.component.html
@@ -8,5 +8,7 @@
   </mat-form-field>
 </div>
 <div *ngFor="let item of inputArray">
-  <mat-card class="item-card">{{ item.name }}</mat-card>
+  <mat-card class="item-card" (click)="navigateToPage()">{{
+    item.name
+  }}</mat-card>
 </div>
