--- a/music-client/src/app/components/artist-page/artist-page.component.html
+++ b/music-client/src/app/components/artist-page/artist-page.component.html
@@ -1,3 +1,3 @@
 <div class="artist-page-title">Browse by Artists</div>
 
-<app-table-list [inputArray]="artists"></app-table-list>
+<app-table-list [inputArray]="artists" [type]="type"></app-table-list>
