Path params now passed to artist page

--- a/music-client/src/app/shared/table-list/table-list.component.html
+++ b/music-client/src/app/shared/table-list/table-list.component.html
@@ -8,7 +8,7 @@
   </mat-form-field>
 </div>
 <div *ngFor="let item of inputArray">
-  <mat-card class="item-card" (click)="navigateToPage()">{{
+  <mat-card class="item-card" (click)="navigateToPage(item)">{{
     item.name
   }}</mat-card>
 </div>
