Passed artist name to artist page and style changes

--- a/music-client/src/app/components/artist-profile-page/artist-profile-page.component.html
+++ b/music-client/src/app/components/artist-profile-page/artist-profile-page.component.html
@@ -1,2 +1,2 @@
-<p>artist-profile-page works!</p>
+<div class="artist-name">{{ selectedArtist.name }}</div>
 <app-table-list [inputArray]="albumsByArtist" [type]="[type]"></app-table-list>
