--- a/music-client/src/app/components/main-page/main-page.component.html
+++ b/music-client/src/app/components/main-page/main-page.component.html
@@ -1,4 +1,4 @@
-<div class="title">Browse by:</div>
+<div class="title">Discover your favorite Artists, Albums and Songs</div>
 <div class="prompt">
   Make a selection to start browsing Artists, Albums and Songs
 </div>
