--- a/music-client/src/app/shared/table-list/table-list.component.html
+++ b/music-client/src/app/shared/table-list/table-list.component.html
@@ -1,4 +1,11 @@
-<div class="sorting-controls">
+<div class="search-and-sorting-controls">
+  <form class="search-field">
+    <mat-form-field class="search-bar">
+      <mat-label>Search</mat-label>
+      <mat-icon matPrefix>search</mat-icon>
+      <input matInput type="text" [(ngModel)]="searchQuery" name="search" />
+    </mat-form-field>
+  </form>
   <mat-form-field appearance="fill">
     <mat-label>Sort by</mat-label>
     <mat-select [(value)]="selected" (selectionChange)="sort()">
@@ -7,8 +14,10 @@
     </mat-select>
   </mat-form-field>
 </div>
-<div *ngFor="let item of inputArray">
-  <mat-card class="item-card" (click)="navigateToPage(item)">{{
-    item.name
-  }}</mat-card>
+<div class="item-list">
+  <div *ngFor="let item of inputArray">
+    <mat-card class="item-card" (click)="navigateToPage(item)"
+      ><div class="item-name">{{ item.name }}</div></mat-card
+    >
+  </div>
 </div>
