--- a/music-client/src/app/components/artist-profile-page/artist-profile-page.component.scss
+++ b/music-client/src/app/components/artist-profile-page/artist-profile-page.component.scss
@@ -4,3 +4,11 @@
   padding-top: 5%;
   padding-bottom: 5%;
 }
+
+.artist-name-header {
+  display: flex;
+}
+
+.artist-description {
+  padding: 0px 20px 0px 20px;
+}
