--- a/music-client/src/app/components/artist-profile-page/artist-profile-page.component.scss
+++ b/music-client/src/app/components/artist-profile-page/artist-profile-page.component.scss
@@ -7,8 +7,9 @@
 
 .artist-name-header {
   display: flex;
+  padding-left: 20px;
 }
 
 .artist-description {
-  padding: 0px 20px 0px 20px;
+  padding: 0px 20px 50px 20px;
 }
