--- a/music-client/src/app/components/song-page/song-page.component.html
+++ b/music-client/src/app/components/song-page/song-page.component.html
@@ -1,2 +1,7 @@
 <div class="song-page-title">Browse by Songs</div>
 <app-table-list [inputArray]="songs"></app-table-list>
+<app-pagination
+  [requestType]="type"
+  [itemPerPage]="resultsPerPage"
+  (emitReturnResults)="getNewList($event)"
+></app-pagination>
