--- a/music-client/src/app/components/artist-profile-page/artist-profile-page.component.html
+++ b/music-client/src/app/components/artist-profile-page/artist-profile-page.component.html
@@ -3,9 +3,14 @@
   <div class="artist-name">{{ selectedArtist.name }}</div>
 </div>
 <div class="artist-description">
-  Van Halen was an American rock band formed in Pasadena, California in 1974.
-  Credited with "restoring hard rock to the forefront of the music scene", Van
-  Halen was known for its energetic live shows and for the virtuosic talent of
-  its prodigy lead-guitarist, Eddie Van Halen.
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas gravida
+  lacus luctus dolor rhoncus, nec aliquam velit rutrum. Pellentesque in ornare
+  orci. Duis consequat libero ac arcu aliquam, a aliquam urna facilisis. Nullam
+  dapibus urna eu orci mollis imperdiet. Etiam fermentum neque convallis neque
+  auctor volutpat. Aenean augue urna, scelerisque a dignissim ac, tincidunt quis
+  dolor. Vestibulum vitae ullamcorper ante. Sed posuere placerat dolor, sed
+  scelerisque est malesuada eget. Fusce at purus tempor, gravida diam posuere,
+  facilisis lectus. Integer risus lectus, fringilla at vulputate sit amet,
+  sollicitudin in nisi.
 </div>
 <app-table-list [inputArray]="albumsByArtist" [type]="[type]"></app-table-list>
