Added mat-icons to pagination  buttons

--- a/music-client/src/app/shared/pagination/pagination.component.html
+++ b/music-client/src/app/shared/pagination/pagination.component.html
@@ -6,6 +6,7 @@
     (click)="previousPageClicked()"
     [disabled]="previousButtonDisabled"
   >
+    <mat-icon>chevron_left</mat-icon>
     Previous
   </button>
   <button
@@ -16,5 +17,6 @@
     [disabled]="nextButtonDisabled"
   >
     Next
+    <mat-icon>chevron_right</mat-icon>
   </button>
 </div>
