--- a/music-client/src/app/components/artist-profile-page/artist-profile-page.component.html
+++ b/music-client/src/app/components/artist-profile-page/artist-profile-page.component.html
@@ -13,4 +13,4 @@
   facilisis lectus. Integer risus lectus, fringilla at vulputate sit amet,
   sollicitudin in nisi.
 </div>
-<app-table-list [inputArray]="albumsByArtist" [type]="[type]"></app-table-list>
+<app-table-list [inputArray]="albumsByArtist" [type]="type"></app-table-list>
