Fixing get correct album info

--- a/music-client/src/app/components/album-profile-page/album-profile-page.component.html
+++ b/music-client/src/app/components/album-profile-page/album-profile-page.component.html
@@ -2,6 +2,9 @@
   <img class="album-icon" src="../../../assets/album.svg" />
   <div class="album-name">{{ selectedAlbum.name }}</div>
 </div>
+<div class="album-release-date">
+  Released in {{ selectedAlbum.year_released }}
+</div>
 <div class="album-description">
   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas gravida
   lacus luctus dolor rhoncus, nec aliquam velit rutrum. Pellentesque in ornare
