fixed naivgation to song page from albums

--- a/music-client/src/app/components/album-page/album-page.component.html
+++ b/music-client/src/app/components/album-page/album-page.component.html
@@ -1,5 +1,5 @@
 <div class="album-page-title">Browse by Albums</div>
-<app-table-list [inputArray]="albums"></app-table-list>
+<app-table-list [inputArray]="albums" [type]="type"></app-table-list>
 <app-pagination
   [requestType]="type"
   [itemPerPage]="resultsPerPage"
